<resources>
    <string name="app_name">ToDo List</string>
    <string name="add">Add</string>
    <string name="note">Note</string>
    <string name="waktu_dibuat">Waktu Dibuat</string>
    <string name="edit">Edit</string>
    <string name="create_note">Create</string>
    <string name="savebutton">Save</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="search">Search</string>
    <string name="waktutempo">Waktu Tempo</string>
    <string name="tanggaltempo">Tanggal Tempo</string>
    <string name="isiNote">Isi Note</string>
    <string name="add_note">Add Note</string>
    <string name="waktu_update">Waktu Update</string>
    <string name="sort">Sort By Deadline</string>
</resources>
