<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTitle"
        android:hint="@string/title"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:singleLine="true"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/editIsi"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:hint="@string/isiNote"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        android:inputType="textMultiLine|textFilter" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/tanggaltempo"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/waktutempo"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:id="@+id/waktu_tempo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/tanggaltempo"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:id="@+id/tanggal_tempo"/>

</LinearLayout>